--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
             <div class="slide s1">
-                <img src="./img/1.jpg" alt="">
+                <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="">
             </div>
 
             <div class="slide">
