--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             </div>
 
             <div class="slide">
-                <img src="./img/2.jpg" alt="">
+                <img src="./img/Screenshot 2023-09-09 00.15.49.png" alt="">
             </div>
 
             <div class="slide">
-                <img src="./img/3.jpg" alt="">
+                <img src="./img/Screenshot 2023-09-09 00.16.20.png" alt="">
             </div>
 
             <div class="slide">
-                <img src="./img/4.jpg" alt="">
+                <img src="./img/Screenshot 2023-09-09 00.20.22.png" alt="">
             </div>
 
             <div class="slide">
-                <img src="./img/5.jpg" alt="">
+                <img src="./img/Screenshot 2023-09-09 00.21.23.png" alt="">
             </div>
         </div>
     </div>
