--- a/index.html
+++ b/index.html
@@ -56,3 +56,35 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
+
+<!--
+JQUERY SLIDER BY JohnRostislavovich - https://codepen.io/JohnRostislavovich
+ALL YOU HAVE TO DO:
+-copy the whole code html, css & js
+-include jquery lib
+-change the images
+-->
+<div id="slideshow">
+   <div class="slideitem current">
+     <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="">
+   </div>
+   <div class="slideitem">
+     <img src="./img/Screenshot 2023-09-09 00.15.49.png" alt="">
+   </div>
+   <div class="slideitem">
+     <img src="./img/Screenshot 2023-09-09 00.16.20.png" alt="">
+   </div>
+   <div class="slideitem">
+     <img src="./img/Screenshot 2023-09-09 00.20.22.png" alt="">
+   </div>
+   <div class="slideitem">
+     <img src="./img/Screenshot 2023-09-09 00.21.23.png" alt="">
+   </div>
+   <div class="slideitem">
+     <img src="http://mirtajn.com/uploads/posts/2013-01/1359577392_high_altitude_eclipse_by_nethskie-d2xq0ww.jpg">
+   </div>
+   <div class="slideitem">
+     <img src="http://img15.nnm.me/3/4/2/b/2/3f06025f75b6fd3544b947da06f.jpg">
+   </div>
+</div>
