--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!--
-JQUERY SLIDER BY JohnRostislavovich - https://codepen.io/JohnRostislavovich
-ALL YOU HAVE TO DO:
--copy the whole code html, css & js
--include jquery lib
--change the images
--->
-<div id="slideshow">
-   <div class="slideitem current">
-     <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="">
+<!DOCTYPE html>
+<html Lang="pt-br">
+<head>
+   <meta charset="UTF-8">
+   <meta nome="viewport" content="widht=device-widht, initial-scale=1.0">
+   <title>Projeto Joaquim</title>
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+   <h1>Slider com HTML e CSS</h1>
+
+   <scprit src="script.js"></scprit>
+</body>
+</html>
+
+
+<img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="">
    </div>
    <div class="slideitem">
      <img src="./img/Screenshot 2023-09-09 00.15.49.png" alt="">
