--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <input type="radio" name="radio-btn" id="radio4">
          <input type="radio" name="radio-btn" id="radio5">
 
-         <div class="slide firt">
+         <div class="slide first">
             <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="Imagem 1">
          </div>
          <div class="slide">
