--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       </div>
       
       <div id="atual" class="image">
-          <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt"">
+          <img src="./img/Screenshot 2023-09-09 00.21.12.png" alt="">
       </div>
       <div class="image">
-          <img src="./img/Screenshot 2023-09-09 00.15.49.png" alt"">
+          <img src="./img/Screenshot 2023-09-09 00.15.49.png" alt="">
       </div>
       <div class="image">
-          <img src="./img/Screenshot 2023-09-09 00.16.20.png" alt"">
+          <img src="./img/Screenshot 2023-09-09 00.16.20.png" alt="">
       </div>
       <div class="image">
-          <img src="./img/Screenshot 2023-09-09 00.21.23.png" alt"">
+          <img src="./img/Screenshot 2023-09-09 00.21.23.png" alt="">
       </div>
   
     </div>
